--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My<span>Book</span>List</h1>
+	<div class="form-group">
+		<form id="loginform">
+			<label for="title">Title</label><br>
+			<input type="text" id="title" name="title" required>
+
+			<label for="author">Author</label><br>
+			<input type="text" id="author" name="author" required>
+
+			<label for="isbn">ISBN#</label><br>
+			<input type="number" id="isbn" name="isbn" required><br>
+
+			<button type="submit" id="submit">Add Book</button>
+		</form>
+	</div>
+	<table class="table table-striped">
+		
+		<thead>
+		 <tr>
+			<th>Title</th>
+			<th>Author</th>
+			<th>ISBN#</th>
+		 </tr>
+		</thead>
+	<tbody id="book-list">
+		
+	</tbody>
+		
+	</table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
